strange overflow and scrollbar bug, s/o bwle

--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,7 @@
 ::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
 	background-color: #DDD;
 }
+
 #chat::-webkit-scrollbar { width: 0 !important }
 
 html, body, header, main, footer, div, i, ul, li, select, input {
@@ -1110,12 +1111,12 @@ select {
 	width: 49px; 
 	height: 49px; 
 	margin: 0; 
-	padding: 0; 
+	padding: 5px; 
 	border: 0;
 	overflow: hidden; 
 }
 .icon img { 
-	margin: 8px; 
+	margin: 3px; 
 	transition: 0.25s;
 }
 .icon:hover > img {
